@@ -985,9 +985,18 @@ static void _trigger_run_program(trig_mgr_info_t *trig_in)
 		setpgrp();
 #endif
 		setsid();
-		setuid(uid);
-		setgid(gid);
-		initgroups(user_name, -1);
+		if (initgroups(user_name, gid) == -1) {
+			error("trigger: initgroups: %m");
+			exit(1);
+		}
+		if (setgid(uid) == -1) {
+			error("trigger: setgid: %m");
+			exit(1);
+		}
+		if (setuid(gid) == -1) {
+			error("trigger: setuid: %m");
+			exit(1);
+		}
 		execl(program, arg0, arg1, NULL);
 		exit(1);
 	} else
