@@ -4,7 +4,8 @@ documents those changes that are of interest to users and admins.
 * Changes in SLURM 1.3.14
 =========================
  -- SECURITY BUG: Fix in sbcast logic that permits users to write files based
-    upon supplimental groups of the slurmd daemon.
+    upon supplimental groups of the slurmd daemon. Similar logic for event
+    triggers if slurmctld is run as user root (not typical).
 
 * Changes in SLURM 1.3.13
 =========================
